testing/errors/pcnegative1.a

	*=-3	; -> "Program counter cannot be negative."
